@@ -90,7 +90,8 @@
         Seb Wills,
         John Zedlewski,
         Waluyo Adi Siswanto,
-		Eduardo Roberto Greco</p>
+		Eduardo Roberto Greco,
+		Thiago Gomes Toledo</p>
 
         <h2>Thanks to:</h2>
 
