@@ -1,6 +1,6 @@
 #Uncomment next line for debugging
-#log4j.rootCategory=ALL,stderr
-log4j.rootCategory=WARN,stderr
+log4j.rootCategory=ALL,stderr
+#log4j.rootCategory=WARN,stderr
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
